syntax = "proto3";

package camel;

message Foo {
  int64 one_two = 1;
}
